test_scores/negative_dimers/features/P60468.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P60468.pkl.xz